--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "jest": "^26.5.3",
     "typescript": "^4.1.3"
   }
