--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "jest": "^26.5.3",
-    "typescript": "^4.1.3"
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
+    "webpack": "^5.16.0",
+    "webpack-cli": "^4.4.0"
   }
 }
