--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "jest": "^26.5.3",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
-    "webpack": "^5.16.0",
-    "webpack-cli": "^4.4.0"
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
+    "webpack-dev-server": "^3.1.14"
   }
 }
